<resources>
    <string name="app_name">FindYourBand</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="seu_nome">Seu nome</string>
    <string name="Email">E-mail</string>
    <string name="sua_senha">Digite sua senha</string>
    <string name="sua_senha_novamente">Digite sua senha novamente</string>
    <string name="confirmar">Confirmar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="title_activity_tela_inicial">TelaInicial</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_filter">Filter</string>
</resources>
