<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gcampos.findyourband.AppFront.Login"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_height="495dp"
        android:layout_width="368dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/imgBtUsuario"
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtSeuNome"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/seu_nome"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/Email"/>

            <EditText
                android:id="@+id/edtSenha"
                android:inputType="textPassword"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/sua_senha"/>

            <EditText
                android:id="@+id/edtSenhaNovamente"
                android:inputType="textPassword"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/sua_senha_novamente"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/confirmar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:background="@color/colorPrimary"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="70dp"/>

        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
