<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_height="495dp"
        android:layout_width="368dp"
        android:orientation="vertical"
        android:layout_marginRight="8dp">


        <LinearLayout
            android:layout_margin="20dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/Email"/>

            <EditText
                android:id="@+id/edtSenha"
                android:inputType="textPassword"
                android:layout_width="360dp"
                android:layout_height="40dp"
                android:hint="@string/sua_senha"/>

            <TextView
                android:text="Esqueceu sua senha?"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:text="@string/entrar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:background="@color/colorPrimary"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="70dp"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
